--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="skill-row">
             <img class="Skill-pic" src="images/binary-code.png" alt="">
             <h3>C#</h3>
-            <p class="skill-description">I have learned C# and I'm a C# intermediate I can create small indie games. I have created a small indie game using C#. I'm giving a link to My indie game called Animal-Matching Below</p>
+            <p class="skill-description">I'm a expert in C#. I can create indie games. And I'm Learning with Unity. Here's the link to my indie game Source Code.</p>
             <a href="https://github.com/Sreenathselva/animal-matching-game">My Game</a>
           </div>
           <div class="skill-row">
