--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="topContainer">
         <img class="top-Cloud" src="images/cloud.png" alt="cloud-img">
-        <h1>I'm Sreenath</h1>
-        <h2> A programmer</h2>
+        <h1 class="name">I'm Sreenath</h1>
+        <h2 class="name"> A programmer</h2>
         <img class="bottom-Cloud" src="images/cloud.png" alt="cloud-img">
         <img class="Mountain" src="images/mountain.png" alt="mountain-img">
 
