--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="Pro-Pic" src="images/coding.png" alt="no img found">
+          <img class="Pro-Pic" src="images/coding.png" alt="Sreenathselva-img">
           <h2>Hello.</h2>
           <p class="intro" >I'm a Web-developer and  I love to have Coffee and Coding</p>
         </div>
